[metadata]
description-file = README.md
[flake8]
max-line-length = 110
ignore = E133, E226, E228, N802, N803, N806, W504
exclude =
    __init__.py,
    doc/conf.py,
    python/lsst/afw/cameraGeom/cameraGeomLib.py,
    python/lsst/afw/detection/detectionLib.py,
    python/lsst/afw/display/displayLib.py,
    python/lsst/afw/fits/fitsLib.py,
    python/lsst/afw/geom/ellipses/ellipsesLib.py,
    python/lsst/afw/geom/polygon/polygonLib.py,
    python/lsst/afw/math/mathLib.py,
    python/lsst/afw/math/detail/detailLib.py,
    tests/testTableArchivesLib.py

[tool:pytest]
addopts = --flake8
flake8-ignore = E133 E226 E228 N802 N803 N806 W504
